[package]
name = "iroh-nym-transport"
version = "0.1.0"
edition = "2024"
description = "Nym mixnet transport for iroh"
license = "MIT OR Apache-2.0"
authors = ["Rüdiger Klaehn <rklaehn@protonmail.com>", "n0 team"]
repository = "https://github.com/n0-computer/iroh-nym-transport"
readme = "README.md"
keywords = ["iroh", "nym", "mixnet", "p2p", "privacy"]
categories = ["network-programming", "asynchronous"]

[dependencies]
nym-sdk = "1.20"
tokio = { version = "1", features = ["full"] }
iroh = { git = "https://github.com/n0-computer/iroh", features = ["unstable-custom-transports"] }
iroh-base = { git = "https://github.com/n0-computer/iroh" }
iroh-tickets = "0.3"
n0-error = "0.1"
bytes = "1"
n0-watcher = "0.6"
n0-future = "0.3"
noq-udp = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
postcard = "1"

[dev-dependencies]
anyhow = "1"
base64 = "0.22"
rand = "0.9"
noq-proto = "0.15"

[patch.crates-io]
iroh-base = { git = "https://github.com/n0-computer/iroh" }
noq = { git = "https://github.com/n0-computer/noq" }
noq-proto = { git = "https://github.com/n0-computer/noq" }
noq-udp = { git = "https://github.com/n0-computer/noq" }
netwatch = { git = "https://github.com/n0-computer/net-tools", branch = "netwatch-noq" }

[[example]]
name = "hello"
path = "examples/hello.rs"

[[example]]
name = "chat"
path = "examples/chat.rs"

[[example]]
name = "inspect_addr"
path = "examples/inspect_addr.rs"

[[example]]
name = "test_size"
path = "examples/test_size.rs"

[[example]]
name = "echo"
path = "examples/echo.rs"
